# autoPredictionTGR

./: .gitignore  README.md  autoPrediction.py  dataSetPreduction.py  split_by_ordonateur.py
Desktop/Gestion agence des voyages/: agence_voyage.sql
Desktop/Test_API/: .env.example  .gitignore  CHANGELOG.md  DELIVERY_SUMMARY.txt  DEPLOYMENT.md  Dockerfile  FAQ.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.txt  KILLER_FEATURES_GUIDE.md  QUICKSTART.md  README.md  README_V200.txt  activate_venv.bat  dashboard.py  db_endpoints.py  deactivate_venv.bat  docker-compose.yml  docker_compose.bat  example_usage.py  local_files.txt  logic.py  main.py  mypy.ini  pyproject.toml  quick_test.py  requirements.txt  run_all.py  run_api.bat  run_tests.bat  start_all.bat  start_api.bat  stop_api.bat  test_api.py  test_api_demo.py  test_logic.py  test_results.json
Desktop/Test_API/.github/workflows/: ci.yml
Desktop/Test_API/dataSets/ordonateurs/: 146014.csv  146029.csv  146043.csv  146073.csv  146087.csv  146102.csv  146116.csv  146160.csv  146248.csv  146306.csv  146438.csv  146452.csv  146467.csv  146496.csv  146525.csv  146540.csv  146554.csv  146569.csv  146613.csv  146671.csv  146686.csv  146700.csv  146744.csv  146773.csv  146788.csv  146803.csv  146817.csv  146876.csv  146890.csv  146905.csv  146919.csv  146963.csv  146992.csv  147007.csv  147022.csv  147036.csv  147051.csv  147065.csv  147080.csv  147095.csv  (+2140 more)
Desktop/Test_API/dataSets/ordonateurs_forecasts/: 146014_forecast.csv  146043_forecast.csv  146058_forecast.csv  146073_forecast.csv  146087_forecast.csv  146102_forecast.csv  146131_forecast.csv  146146_forecast.csv  146160_forecast.csv  146175_forecast.csv  146248_forecast.csv  146292_forecast.csv  146306_forecast.csv  146481_forecast.csv  146496_forecast.csv  146511_forecast.csv  146525_forecast.csv  146569_forecast.csv  146584_forecast.csv  146598_forecast.csv  146613_forecast.csv  146671_forecast.csv  146686_forecast.csv  146759_forecast.csv  146773_forecast.csv  146788_forecast.csv  146803_forecast.csv  146817_forecast.csv  146919_forecast.csv  146963_forecast.csv  146978_forecast.csv  147007_forecast.csv  147022_forecast.csv  2233_forecast.csv  2263_forecast.csv  summary_20251222_115143.csv
Desktop/Test_API/docs/: DOCUMENTATION_BRIEF.md  DOCUMENTATION_FULL.md
Desktop/Test_API/docs_archive/: AMÉLIORATIONS_v2.0_RÉSUMÉ.md  COMPLETE_GUIDE.md  IMPROVEMENTS_v2.0.md  README.md  STARTUP_GUIDE.md
Desktop/Test_API/models/: __init__.py  database.py
Desktop/Test_API/scripts/: debug_datacleaner.py  test_curl_examples.sh
Desktop/Test_API/scripts/windows/: run_tests.bat
Desktop/Test_API/tests/: conftest.py  test_api_smoke.py  test_complete_suite.py  test_density.py  test_logic.py  test_security_additional.py  test_warnings.py
dataSets/ordonateurs/: 146058.csv  146131.csv  146146.csv  146175.csv  146292.csv  146481.csv  (+1183 more)
run_by_ordinateurs/: run_ordinateurs_all_batch.py  run_ordinateurs_all_prompt_per_dataset.py  run_ordinateurs_by_code.py
(+38 files in other folders)
